--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
+    testImplementation 'org.mockito:mockito-core:2.11.0'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "android.arch.persistence.room:runtime:1.1.1"
-    implementation 'com.google.code.gson:gson:2.8.5'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation 'com.squareup.picasso:picasso:2.71828'
+    androidTestImplementation 'androidx.test:rules:1.3.0-alpha02'
 }
